<resources>
    <string name="app_name">Facential</string>

    <!--    Onboarding-->
    <string name="title1">Welcome to Facential!</string>
    <string name="description1">Start your journey to healthy and radiant skin with our app to help understand your skin type and offers personalized skincare recommendations just for you.</string>

    <string name="title2">Skin Type Detection</string>
    <string name="description2">We\'ll analyze your responses and identify your specific skin type, whether it\'s dry, oily, combination, sensitive, or normal.</string>

    <string name="title3">Personalized Recommendations</string>
    <string name="description3">Our app will generate personalized skincare recommendations just for you.</string>

    <string name="title4">Routine Tracker</string>
    <string name="description4">Keep track of your skincare routine effortlessly.</string>

    <string name="title_final">Get Started</string>
    <string name="description_final">Keep track of your skincare routine effortlessly.</string>

    <string name="get_started">Get Started</string>

    <!--    Login dan Register-->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_empty">Scan your face for the first time to discover your personalized skincare recommendations! Let\'s find out the perfect skincare product just for you!</string>
    <string name="day">Day</string>
    <string name="night">Night</string>


    <string name="google_maps_api_key">AIzaSyC5mBQuHOKaeUDO4Y3c2ZRja-_b6KbW3MA</string>


    <!--    Skincare Routine-->

    <string name="day_routine_toner_content">Toner helps to remove any remaining impurities and residue that may still be present on the surface of the skin. According to Dermalogica, toner is a water-based solution that helps restore the lost pH balance of the skin after cleansing. The ideal time to apply toner is immediately after cleansing to provide more hydration to the skin. Toner also prepares the skin for the next skincare steps.</string>
    <string name="day_routine_essence_content">Some people may choose to skip this step because they are still unsure about the actual function of essence. However, essence plays a significant role in skin health. According to Healthline, essence is a water-based skincare product that contains high concentrations of active ingredients to moisturize, protect, and improve overall skin health.  Some commonly found active ingredients in essence include glycerin, hyaluronic acid, botanical plant extracts, and vitamins. To apply essence, pour a few drops onto your palm and gently pat it onto your face.</string>
    <string name="day_routine_serum_content">The next important step in the morning skincare routine is applying a facial serum. Serum is a skincare product with a lightweight texture that contains specific high-concentration active ingredients for the skin, allowing for quick absorption.</string>
    <string name="day_routine_moisturizer_content">Moisturizer is the next step in the morning skincare routine and should be applied after the serum. Our facial skin needs moisturization to keep the skin cells hydrated. Moisturizer also helps slow down signs of aging and prevents various skin issues. For those with normal or combination skin, a cream-textured moisturizer is recommended as it contains more oil. On the other hand, for oily skin types, a lightweight or gel-textured moisturizer is the right choice.</string>
    <string name="day_routine_sunscreen_content">Lastly, the most important step in the morning skincare routine is applying sunscreen. Sunscreen is a skincare product that protects the skin from UV radiation. It\'s best to use sunscreen daily, especially when you want to engage in outdoor activities. The effects of UVA and UVB radiation can be harmful to the skin, ranging from sunburn, the appearance of dark spots, premature aging, to the risk of skin cancer. Dermatologists recommend using sunscreen with a minimum SPF of 30. To apply sunscreen, pour about two finger-lengths of product for optimal protection, then apply it to the face at least 15-30 minutes before going outside. Reapply sunscreen at least every 2 hours.</string>
    <string name="night_routine_makeup_remover_content">In the evening, you need to perform double cleansing after a day of activities. Double cleansing is necessary to remove all the dirt and makeup that have accumulated on the surface of the face. You can choose to use cleansing oil, micellar water, or cleansing balm as the first cleanser. Then, apply a makeup remover directly using your fingers or a thin cotton pad.</string>
    <string name="night_routine_facial_cleanser_content">After the makeup remover, the next step in the evening skincare routine is to cleanse the face with a facial cleanser. Wash your face using a facial wash evenly. The optimal duration for cleansing the face is between 30 seconds to 1 minute. Use circular motions and cover the entire face area, then rinse with running water.</string>
    <string name="night_routine_toner_content">Use a toner as the next step in the evening skincare routine. You can use a cotton pad if you have just worn makeup to ensure that there are no remaining impurities or makeup on the face.  Toner is divided into two types: exfoliating toner and hydrating toner. Both have different functions. Exfoliating toner is beneficial for exfoliation by removing dead skin cells, while hydrating toner focuses on moisturizing the facial skin and facilitating the absorption of the next skincare products.</string>
    <string name="night_routine_serum_content">After using toner, it\'s time to apply serum. Some popular active ingredients found in serums are niacinamide, hyaluronic acid, ceramides, panthenol, glycolic acid, and others. Each ingredient has its own specific function, whether it\'s moisturizing, soothing redness, preventing premature aging, or removing acne scars. Make sure to choose a serum that suits your skin\'s needs.</string>
    <string name="night_routine_eye_cream_content">Some people may have issues with the skin around their eyes, such as dark circles, under-eye bags, wrinkles, or dry and flaky skin. This is where eye cream comes in as the next step in the evening skincare routine. Eye creams with hyaluronic acid and ceramides are excellent for maintaining skin hydration, while those with vitamin C and E are great for combating premature aging. Apply eye cream gently around the eye area using your fingers.</string>
    <string name="night_routine_moisturizer_content">Moisturizer is the next step in the evening skincare routine, serving to seal the entire nighttime skincare routine. Your facial skin needs to be kept moisturized throughout the night. Additionally, some moisturizers have specific ingredients to conceal fine lines and soothe redness in the facial areas.</string>
    <string name="night_routine_lip_content">Don\'t forget about your lips! Lip balm or lip serum is the final step in the evening skincare routine and is essential, especially for those with dry and chapped lips. Proper lip care ensures that your lips stay moisturized and nourished. You certainly don\'t want to struggle with applying lipstick on cracked lips, right? So, make sure to take good care of your lips every day.</string>
    <string name="day_routine_facial_cleanser_content">The first step in the morning skincare routine is to cleanse the face with a facial cleanser to remove dirt, bacteria, and any residue from the skincare products used at night. Even if you haven\'t been outside after completing your nighttime skincare routine, it\'s still important to cleanse your face using a facial wash or foam. This is because the skin tends to produce oil in the morning while we sleep. Moreover, during rest, your facial skin comes into direct contact with pillowcases. It\'s possible that dust accumulates on the surface, which can clog pores and lead to the appearance of blackheads or acne.</string>
</resources>