<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Welcome!"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_img_login"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/img_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/c_login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/c_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login_submit"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/nav_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?" />

            <TextView
                android:id="@+id/btn_register_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="or"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />



</androidx.constraintlayout.widget.ConstraintLayout>