<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/bg_1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/bg_get_started_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/bg_2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/bg_get_started_1"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="Hi"
            android:textColor="@color/cream"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/bg_1"
            app:layout_constraintTop_toTopOf="@+id/bg_1" />

        <TextView
            android:id="@+id/tv_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discover your skin persona"
            android:textColor="@color/cream"
            android:textSize="17sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/tv_hello"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

        <TextView
            android:id="@+id/tv_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="Recommendation"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_1" />

        <ProgressBar
            android:id="@+id/loading_recommendation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommendation" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommendation">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_weather"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="32sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_weather"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_skincare_recommendation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable your location permission to show recommendation :)"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="Latest Scan"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_recommendation" />

        <ProgressBar
            android:id="@+id/loading_latest"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_latest" />

        <TextView
            android:id="@+id/tv_history_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/history_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_latest" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_latest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_latest">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_card_history"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_card_history_title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_card_history"
                    app:layout_constraintTop_toTopOf="@+id/iv_card_history" />

                <TextView
                    android:id="@+id/tv_card_history_desc"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:text="Click here to discover your skincare recommendations and unleash your inner glow!"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/tv_card_history_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_history_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_tracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="Daily Tracker"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_latest" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tracker">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="20 Juni 2023"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btn_tracker_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/btn_tracker_day"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/bg_tracker_btn"
                        android:contentDescription="@string/day"
                        android:padding="20dp"
                        android:src="@drawable/ic_day" />

                    <ImageView
                        android:id="@+id/btn_tracker_night"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/bg_tracker_btn"
                        android:contentDescription="@string/night"
                        android:padding="20dp"
                        android:src="@drawable/ic_night" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_toggle_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_tracker_layout">

                    <CheckBox
                        android:id="@+id/btn_switch_day"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="60dp"/>

                    <CheckBox
                        android:id="@+id/btn_switch_night"
                        android:layout_width="90dp"
                        android:layout_height="60dp"/>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>